<resources>
    <string name="app_name">RocketLaunch</string>
    <string name="title_activity_main2"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="starting_schedules">Starting Schedules</string>
    <string name="port">Port</string>
    <string name="near_locations">Near Locations</string>
    <string name="live">Live</string>
    <string name="help">Help</string>
    <string name="news">News</string>
    <string name="videos">Videos</string>
    <string name="informations">Informations</string>
    <string name="starting_schdules">Starting Schedules</string>
    <string name="textview">TextView</string>
    <string name="the_national_aeronautics_and_space_administration_nasa_is_responsible_for_unique_scientific_and_technological_achievements_in_human_spaceflight_aeronautics_space_science_and_space_applications_that_have_had_widespread_impacts_on_our_nation_and_the_world_forged_in_response_to_early_soviet_space_achievements_nasa_was_built_on_the_national_advisory_committee_for_aeronautics_naca_and_other_government_organizations_as_the_locus_of_u_s_civil_aerospace_research_and_development_when_nasa_opened_for_business_on_october_1_1958_it_accelerated_the_work_already_started_on_human_and_robotic_spaceflight_nasa_s_first_high_profile_program_was_project_mercury_an_effort_to_learn_if_humans_could_survive_in_space_this_was_followed_by_project_gemini_which_used_spacecraft_built_for_two_astronauts_to_perfect_the_capabilities_needed_for_the_national_objective_of_a_human_trip_to_the_moon_by_the_end_of_the_1960s_project_apollo_achieved_that_objective_in_july_1969_with_the_apollo_11_mission_and_expanded_on_it_with_five_more_successful_lunar_landing_missions_through_1972_after_the_skylab_and_apollo_soyuz_test_projects_of_the_mid_1970s_nasa_s_human_spaceflight_efforts_again_resumed_in_1981_with_the_space_shuttle_program_that_continued_for_30_years_the_shuttle_was_not_only_a_breakthrough_technology_but_was_essential_to_our_next_major_step_in_space_the_construction_of_the_international_space_station_over_the_last_60_years_nasa_has_continued_to_push_the_boundaries_with_cutting_edge_aeronautics_research_that_has_dramatically_changed_the_way_we_build_and_fly_airplanes_nasa_has_also_completed_the_reconnaissance_of_our_solar_system_with_intense_investigation_of_all_the_planets_using_orbital_spacecraft_like_the_hubble_space_telescope_nasa_has_also_dramatically_changed_our_understanding_of_the_universe_around_us_as_well_as_our_own_planet_nasa_s_early_work_on_launch_vehicles_communication_satellites_and_weather_satellites_has_fundamentally_changed_daily_life_and_created_whole_new_industries_as_a_catalyst_for_international_cooperation_nasa_has_also_changed_how_and_why_humanity_conducts_space_exploration_now_nasa_is_preparing_to_take_humankind_farther_than_ever_before_as_it_helps_to_foster_a_robust_commercial_space_economy_near_earth_and_pioneers_further_human_and_robotic_exploration_as_we_venture_into_deep_space_the_nasa_history_office_program_publishes_a_quarterly_newsletter_as_well_as_an_array_of_books_print_and_digital_hosts_social_media_provides_fellowships_and_runs_the_historical_reference_collection_our_version_of_an_archive_to_assist_the_public_in_finding_more_information_on_aeronautical_and_space_history_in_addition_the_staff_produces_the_aeronautics_and_space_report_of_the_president_the_national_aeronautics_and_space_act_of_1958_directs_nasa_to_produce_an_annual_report_that_includes_a_comprehensive_description_of_the_programmed_activities_and_the_accomplishments_of_all_agencies_of_the_united_states_in_the_field_of_aeronautics_and_space_activities_quot_during_the_preceding_year_our_staff_also_assists_the_public_media_researchers_nasa_employees_and_congressional_staff_to_find_resources_within_and_outside_the_nasa_history_office_s_historical_reference_collection">The National Aeronautics and Space Administration (NASA), is responsible for unique scientific and technological achievements in human spaceflight, aeronautics, space science, and space applications that have had widespread impacts on our nation and the world. Forged in response to early Soviet space achievements, NASA was built on the National Advisory Committee for Aeronautics (NACA), and other government organizations, as the locus of U.S. civil aerospace research and development. When NASA opened for business on October 1, 1958, it accelerated the work already started on human and robotic spaceflight. NASA\'s first high profile program was Project Mercury, an effort to learn if humans could survive in space. This was followed by Project Gemini, which used spacecraft built for two astronauts to perfect the capabilities needed for the national objective of a human trip to the Moon by the end of the 1960s. Project Apollo achieved that objective in July 1969 with the Apollo 11 mission and expanded on it with five more successful lunar landing missions through 1972. After the Skylab and Apollo-Soyuz Test Projects of the mid-1970s, NASA\'s human spaceflight efforts again resumed in 1981, with the Space Shuttle program that continued for 30 years. The Shuttle was not only a breakthrough technology, but was essential to our next major step in space, the construction of the International Space Station. Over the last 60 years NASA has continued to push the boundaries with cutting edge aeronautics research that has dramatically changed the way we build and fly airplanes. NASA has also completed the reconnaissance of our solar system, with intense investigation of all the planets. Using orbital spacecraft like the Hubble Space Telescope, NASA has also dramatically changed our understanding of the universe around us, as well as our own planet. NASA’s early work on launch vehicles, communication satellites, and weather satellites has fundamentally changed daily life and created whole new industries. As a catalyst for international cooperation, NASA has also changed how and why humanity conducts space exploration. Now, NASA is preparing to take humankind farther than ever before, as it helps to foster a robust commercial space economy near Earth, and pioneers further human and robotic exploration as we venture into deep space. The NASA History Office Program publishes a quarterly newsletter, as well as an array of books (print and digital), hosts social media, provides fellowships, and runs the Historical Reference Collection (our version of an archive) to assist the public in finding more information on aeronautical and space history. In addition, the staff produces the Aeronautics and Space Report of the President. The National Aeronautics and Space Act of 1958 directs NASA to produce an annual report that includes a “comprehensive description of the programmed activities and the accomplishments of all agencies of the United States in the field of aeronautics and space activities\" during the preceding year. Our staff also assists the public, media, researchers, NASA employees and Congressional staff to find resources within and outside the NASA History Office\'s Historical Reference Collection.</string>
    <string name="nasa_history_overview">NASA History Overview</string>
</resources>
